--- a/update-order.html
+++ b/update-order.html
@@ -23,6 +23,7 @@
 </head>
 <body class="flex h-screen overflow-hidden bg-slate-50">
 
+    <!-- Main Content Area -->
     <div class="flex-grow flex flex-col overflow-y-auto">
         <main class="flex-grow p-6">
             <div class="max-w-4xl mx-auto">
@@ -108,6 +109,7 @@
         </main>
     </div>
 
+    <!-- Stone Selection Modal -->
     <div id="stone-select-modal" class="hidden fixed inset-0 bg-black bg-opacity-50 z-50 flex items-center justify-center p-4">
         <div class="bg-white rounded-xl shadow-2xl w-full max-w-4xl max-h-[90vh] flex flex-col">
             <header class="p-4 border-b flex justify-between items-center"><h2 class="text-xl font-bold text-stone-800">เลือกหิน</h2><button type="button" id="close-stone-modal-btn" class="p-1 rounded-full hover:bg-stone-200 transition-colors"><svg class="w-6 h-6 text-stone-600" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path></svg></button></header>
@@ -116,6 +118,7 @@
         </div>
     </div>
 
+    <!-- Charm Selection Modal -->
     <div id="charm-select-modal" class="hidden fixed inset-0 bg-black bg-opacity-50 z-50 flex items-center justify-center p-4">
         <div class="bg-white rounded-xl shadow-2xl w-full max-w-4xl max-h-[90vh] flex flex-col">
             <header class="p-4 border-b flex justify-between items-center"><h2 class="text-xl font-bold text-stone-800">เลือกจี้</h2><button type="button" id="close-charm-modal-btn" class="p-1 rounded-full hover:bg-stone-200 transition-colors"><svg class="w-6 h-6 text-stone-600" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path></svg></button></header>
